--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "serve-favicon": "^2.5.0",
     "string-similarity": "^4.0.4",
     "winston": "^3.17.0"
   }
